# Hacking-DNS-Searcher

./: README.md  pyproject.toml
data/: montpellier_report.html  mtpacademy_report.html
docs/: DNS.txt
src/: dns_searcher.py  main.py
src/features/: dns_analyzer.py
src/model/: dns_resolver.py  openai_client.py
src/utils/: report_generator.py
