[tool.poetry]
name = "dns-searcher"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.7.0"
openai = "^1.57.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
